--- a/web/package.json
+++ b/web/package.json
@@ -8,10 +8,14 @@
   },
   "license": "MIT",
   "dependencies": {
-    "aurelia-bootstrapper": "^2.3.0",
     "aurelia-animator-css": "^1.0.4",
-    "bluebird": "^3.5.2",
-    "aurelia-polyfills": "^1.3.0"
+    "aurelia-api": "^3.2.1",
+    "aurelia-authentication": "^3.8.2",
+    "aurelia-bootstrapper": "^2.3.0",
+    "aurelia-dialog": "^1.1.0",
+    "aurelia-polyfills": "^1.3.0",
+    "aurelia-validation": "^1.3.2",
+    "bluebird": "^3.5.2"
   },
   "peerDependencies": {},
   "devDependencies": {
